--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,14 @@ version: '3.3'
 
 services:
 
+  rabbitmq:
+    image: rabbitmq:management-alpine
+    container_name: 'rabbitmq'
+    ports:
+      - 5672:5672
+      - 15672:15672
+    restart: always
+
   mongo:
     image: mongo:4.4.18-rc0-focal
     container_name: 'mongo-db'
@@ -11,7 +19,6 @@ services:
       MONGO_INITDB_DATABASE: ${MONGO_INITDB_DATABASE}
     ports:
       - "27017:27017"
-
 
   kenwin-challenge:
     build: .
@@ -24,7 +31,18 @@ services:
       FAST_API_PORT: ${FAST_API_PORT}
     depends_on:
       - mongo
+      - rabbitmq
     stdin_open: true
     tty: true
     volumes:
       - .:/app
+
+  email-service:
+    build:
+      context: ../mail-service
+      dockerfile: Dockerfile
+    container_name: 'email-service'
+    depends_on:
+      - rabbitmq
+    stdin_open: true
+    tty: true
